fixed some spacing issues in the conact section

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
 #portfolioText {
   flex: 1; /* Allows text content to fill available space */
   margin-left: 30px; /* Adds space between the text and the photo */
+  margin-right: 30px;
 }
 .text-content p {
   margin-bottom: 3px;
@@ -81,6 +82,8 @@
   text-align: center;
   font-style: italic;
   font-size: large;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 .top-bar {
   background-color: rgb(190, 210, 237);
